Fix Svg on Safari

--- a/src/sass/menu.scss
+++ b/src/sass/menu.scss
@@ -43,6 +43,11 @@ nav.navbar {
       transform: translateY(150px);
     }
   }
+
+  svg {
+    width: 100%;
+    height: 100%;
+  }
 }
 
 figure {
